# stemsplat

./: .gitignore  .install_state.json  .stemsplat_icon.icns  Dockerfile.cpu  Dockerfile.gpu  MODEL_DOWNLOAD_HARDENING.md  README.md  Stemsplat  Stemsplat.command  app_paths.py  build_app.sh  converter.py  downloader.py  install.command  install.py  launch.py  launcher.py  main.py  package-lock.json  program_info.txt  pyproject.toml  requirements.txt  run_install.command  setup.sh  torch.py
.codex/environments/: environment.toml
configs/: config_deux_becruily.yaml  config_karaoke_frazer_becruily.yaml  model_mel_band_roformer_denoise.yaml
split/: attend.py  bs_roformer.py  drumsep_mdx23c.py  mel_band_roformer.py  split.py
stemrunner/: __main__.py  cli.py  models.py  pipeline.py  server.py
stemrunner/tests/: test_pipeline.py
stemsplat-0.3.0/: .gitignore  Dockerfile.cpu  Stemsplat  app_paths.py  main.py  pyproject.toml
stemsplat-0.3.0/configs/: config_guitar_becruily.yaml
stemsplat-0.3.0/split/: attend.py
stemsplat-0.3.0/test_files/: notes & setup checklist.txt
stemsplat-0.3.0/tools/: render_dmg_background.py
teacherrater-frontend/: Dockerfile  middleware.ts  package.json  tailwind.config.ts  tsconfig.json
tests/: test_downloader_checksums.py  test_editor_waveforms.py  test_expanded_battery.py  test_model_download_retry_policy.py  test_model_registry.py  test_output_layout.py  test_release_status.py  test_runtime_estimator.py
tools/: run_test_battery.py
torchaudio/: __init__.py
web/: index.html  install.html  lan_login.html  launch.html  mobile.html
(+20 files in other folders)
