[tool.poetry]
name = "stemrunner"
version = "0.2.0"
description = "Self-hosted stem separation tool"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
python-multipart = "*"
numpy = "*"
pyyaml = "*"
soundfile = "*"
einops = "*"
rotary_embedding_torch = "*"
packaging = "*"
beartype = ">=0.17"
imageio-ffmpeg = "*"
certifi = "*"
mutagen = "*"
demucs = "*"
pywebview = "*"
pyobjc-core = "*"
pyobjc-framework-Cocoa = "*"
pyobjc-framework-WebKit = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
